template/iterative/gpt/gpt-4o/row_62_update_14_template_20250425_070641.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: >
  AWS CloudFormation template to create an Amazon Aurora MySQL cluster with two publicly accessible db.t3.large instances and customized parameter groups.

Parameters:
  DBName:
    Description: The name of the database to create.
    Type: String
    Default: mydatabase
  DBUsername:
    Description: The database admin account username.
    Type: String
    Default: adminuser
    MinLength: 1
    MaxLength: 16
    AllowedPattern: '[a-zA-Z][a-zA-Z0-9]*'
    ConstraintDescription: Must begin with a letter and contain only alphanumeric characters.

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: AuroraVPC

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: AuroraInternetGateway

  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: AuroraPublicRouteTable

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  Subnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !Select [0, !GetAZs '']
      MapPublicIpOnLaunch: true

  Subnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.0.2.0/24
      AvailabilityZone: !Select [1, !GetAZs '']
      MapPublicIpOnLaunch: true

  Subnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref Subnet1
      RouteTableId: !Ref PublicRouteTable

  Subnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref Subnet2
      RouteTableId: !Ref PublicRouteTable

  AuroraDBClusterParameterGroup:
    Type: AWS::RDS::DBClusterParameterGroup
    Properties:
      Description: Custom cluster parameter group for Aurora MySQL
      Family: aurora-mysql5.7
      Parameters:
        time_zone: UTC
        sql_mode: "STRICT_TRANS_TABLES,NO_ENGINE_SUBSTITUTION"

  AuroraDBParameterGroup:
    Type: AWS::RDS::DBParameterGroup
    Properties:
      Description: Custom parameter group for Aurora MySQL instances
      Family: aurora-mysql5.7
      Parameters:
        sql_mode: "STRICT_TRANS_TABLES,NO_ENGINE_SUBSTITUTION"

  AuroraSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable public access to Aurora MySQL
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 0.0.0.0/0

  AuroraDBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Subnet group for Aurora MySQL
      SubnetIds:
        - !Ref Subnet1
        - !Ref Subnet2

  DBPasswordSecret:
    Type: AWS::SecretsManager::Secret
    Properties:
      Description: Secret for Aurora DB Master User Password
      GenerateSecretString:
        SecretStringTemplate: '{"username": "adminuser"}'
        GenerateStringKey: "password"
        PasswordLength: 16
        ExcludeCharacters: '"@/\\'

  AuroraDBCluster:
    Type: AWS::RDS::DBCluster
    Properties:
      Engine: aurora-mysql
      EngineVersion: '5.7.mysql_aurora.2.12.4'
      MasterUsername: !Ref DBUsername
      MasterUserPassword: !Sub '{{resolve:secretsmanager:${DBPasswordSecret}:SecretString:password}}'
      DBClusterParameterGroupName: !Ref AuroraDBClusterParameterGroup
      VpcSecurityGroupIds:
        - !Ref AuroraSecurityGroup
      DBSubnetGroupName: !Ref AuroraDBSubnetGroup
      DatabaseName: !Ref DBName

  AuroraDBInstance1:
    Type: AWS::RDS::DBInstance
    Properties:
      DBInstanceClass: db.t3.large
      Engine: aurora-mysql
      DBClusterIdentifier: !Ref AuroraDBCluster
      PubliclyAccessible: true
      DBParameterGroupName: !Ref AuroraDBParameterGroup

  AuroraDBInstance2:
    Type: AWS::RDS::DBInstance
    Properties:
      DBInstanceClass: db.t3.large
      Engine: aurora-mysql
      DBClusterIdentifier: !Ref AuroraDBCluster
      PubliclyAccessible: true
      DBParameterGroupName: !Ref AuroraDBParameterGroup

Outputs:
  DBClusterEndpoint:
    Description: The endpoint address of the Aurora DB cluster
    Value: !GetAtt AuroraDBCluster.Endpoint.Address
  SecurityGroupId:
    Description: Security Group ID for the Aurora MySQL instances
    Value: !Ref AuroraSecurityGroup
  DBInstanceIdentifiers:
    Description: Identifiers of the Aurora DB instances
    Value: !Join [",", [!Ref AuroraDBInstance1, !Ref AuroraDBInstance2]]
